# base-llm

./: README.md
Extra-chapter/: README.md
Extra-chapter/minimax-api-tutorial/: readme.md
code/C11/: 04_dataset_gen.ipynb
code/C19/: 01_clip.py
code/C2/: 01_jieba.py  04_gensim.ipynb
code/C20/seeker-omni/: pyproject.toml
code/C20/seeker-omni/configs/: e2e.yaml  train.yaml
code/C20/seeker-omni/configs/model/: base_26m.yaml
code/C20/seeker-omni/configs/stages/: s0.yaml  sft_text.yaml
code/C20/seeker-omni/dataprep/: __init__.py  __main__.py  data_paths.py
code/C20/seeker-omni/dataprep/download/: __init__.py  __main__.py  cleaning.py  fetch.py  flickr8k.py  minimind.py
code/C20/seeker-omni/dataprep/prepare/: __init__.py  __main__.py  memmap.py  memmap_io.py  packed_builder.py  sft_builder.py  text_bpe.py  tokenizer.py
code/C20/seeker-omni/seeker_omni/: __init__.py  __main__.py  config.py  paths.py  pipeline.py  special_tokens.py
code/C20/seeker-omni/seeker_omni/dataset/: __init__.py  memmap.py  schema.py
code/C20/seeker-omni/seeker_omni/inference/: __init__.py  evaluate.py  generate.py
code/C20/seeker-omni/seeker_omni/model/: __init__.py  attention.py  block.py  lm.py  mlp.py  norm.py  projector.py  resampler.py  rope.py
code/C20/seeker-omni/seeker_omni/steps/: train.py
code/C20/seeker-omni/seeker_omni/steps/e2e/: __init__.py  distill.py  runner.py  vision.py
code/C20/seeker-omni/seeker_omni/train/: __init__.py  checkpoint.py  freezing.py  loop.py  lr.py  seed.py
code/C8/: 03_data_loader.py
docs/: README.md  _sidebar.md  index.html
(+43 files in other folders)
