[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "seeker-omni"
version = "0.1.0"
description = "Native-unified tiny VLM (image -> text) research code."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pyyaml>=6.0",
  "tqdm>=4.66",
  "tokenizers>=0.15",
  "torch>=2.2",
  "setuptools<81",
  "tensorboard>=2.14",
  "transformers>=4.41",
  "pillow>=10.3",
]

[tool.hatch.build.targets.wheel]
packages = ["seeker_omni", "dataprep"]
